# shp_checker_DLTB

./: .gitignore  download_deps.py  download_python.py  install.py  makefile  pyproject.toml  requirements.txt
src/: geographical.py  loader.py  logger.py  main.py  util.py
src/rule/: list.py  register.py
tools/: get-pip.py  setup_pip.py  start.bat
