[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "loguru>=0.7.3",
    "pip>=25.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[tool.uv]
cache-dir = "\\cache\\uv"
